<resources>
    <string name="app_name">EcommerceDemo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_back"><![CDATA[<< Go Back]]></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Abc</string>
    <string name="nav_header_subtitle">abc@xyz.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_notification">Notification</string>
    <string name="action_myCart">My Cart</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="todo">TODO</string>
    <string name="communicate">Communicate</string>
    <string name="my_orders">My orders</string>
    <string name="hello_wish_list_fragment">Hello WishList Fragment</string>
    <string name="hello_my_account_fragment">Hello My Account Fragment</string>
    <string name="hello_my_cart_fragment">Hello My Cart Fragment</string>
    <string name="hello_order_fragment">Hello Order Fragment</string>
    <string name="hello_reward_fragment">Hello Reward Fragment</string>
    <string name="deals_of_the_day">Deals of the day!</string>
    <string name="view_all">view all</string>
    <string name="signin">SignIn</string>
    <string name="forget_password">Forget password ?</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="sign_in">SIGN IN</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account?Sign up</string>
    <string name="sign_up">SIGN UP</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">confirm password</string>
    <string name="already_have_an_account_sign_in">Already have an account?Sign in</string>
    <string name="text_view">Text View</string>
    <string name="splash_screen">SPLASH SCREEN</string>
    <string name="this_is_demo_ecommerce_app">This is Demo ECommerce App.</string>
    <string name="home_appliances">Home Appliances</string>
    <string name="_forget_password">Forget password?</string>
    <string name="don_t_warry_we_just_to_need_your_register_email_address_and_done">Don\'t warry we just to need your register email address and done!</string>
    <string name="email_id">Email Id</string>
    <string name="recovery_email_sent_successfully_check_your_inbox">Recovery email sent successfully! check your inbox</string>
    <string name="reset_password">Reset password</string>
    <string name="trending">#Trending</string>
    <string name="home">Home</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_cart">My Cart</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_account">My Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="trending_searches">Trending searches</string>
    <string name="detergent">detergent powder</string>
    <string name="sugar">sugar</string>
    <string name="atta">atta</string>
    <string name="ghee">ghee</string>
    <string name="tea">tea</string>
    <string name="mustardoil">mustard oil</string>
    <string name="salts">salt</string>
    <string name="biscuits">biscuit</string>
    <string name="maggi">maggi</string>
    <string name="dal">dal</string>
</resources>
