<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_home"
            android:icon="@drawable/forget_img"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_my_order"
            android:icon="@drawable/ic_order"
            android:title="@string/my_orders" />
        <item
            android:id="@+id/nav_my_rewards"
            android:icon="@drawable/ic_gift"
            android:title="@string/my_rewards" />
        <item
            android:id="@+id/nav_my_cart"
            android:icon="@drawable/ic_shopping_cart_black_241dp"
            android:title="@string/my_cart" />
        <item
            android:id="@+id/nav_my_wishlist"
            android:icon="@drawable/ic_heart"
            android:title="@string/my_wishlist" />

        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/ic_person_outline_black_24dp"
            android:title="@string/my_account" />
    </group>

    <item
        android:id="@+id/nav_signOut"
        android:icon="@drawable/ic_logout_24dp"
        android:title="@string/sign_out" />
</menu>
